my-app-bluegreen/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: my-app-bluegreen
  namespace: my-app-bluegreen
spec:
  replicas: 5
  strategy:
    blueGreen:
      activeService: my-app-bluegreen-active
      previewService: my-app-bluegreen-preview
      autoPromotionEnabled: false
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: my-app-bluegreen
  template:
    metadata:
      labels:
        app: my-app-bluegreen
    spec:
      containers:
      - name: my-app-bluegreen
        image: jakuboskera/blue-green:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
