my-app-bluegreen/svc-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-bluegreen-active
  namespace: my-app-bluegreen
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: my-app-bluegreen
